mdapi/Custom/objects/Corp_Project__c.object
<CustomObject>
    <description>Corporate Projects was built early on as a quick-hit project mgmt tool for a select group of corporate users. We have since explored more robust products and will likely at a future point time.</description>
    <fields>
        <fullName>Actual_Budget_Estimated__c</fullName>
        <label>Actual Budget</label>
        <summarizedField>Budget_Line_Item__c.Expense_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Corp_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Budget__c</fullName>
        <label>Actual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Special Project - Nick</fullName>
                </value>
                <value>
                    <fullName>Special Project - Peter</fullName>
                </value>
                <value>
                    <fullName>Special Project - Eric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concierge_Ticket__c</fullName>
        <label>Concierge Ticket</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eric_Elder__c</fullName>
        <label>Eric Elder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval needed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenses_Paid_to_Date__c</fullName>
        <description>These are the expenses paid to date</description>
        <label>Expenses Paid to Date</label>
        <summarizedField>Budget_Line_Item__c.Paid_to_Date__c</summarizedField>
        <summaryForeignKey>Budget_Line_Item__c.Corp_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <label>Mark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval needed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nick__c</fullName>
        <label>Nick</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval needed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IF(  TEXT(Project_Status__c) = &quot;On Hold&quot;,  IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMs&quot;, &quot;Yellow flag&quot;) , 
IF(  TEXT(Project_Status__c)  &lt;&gt; &quot;Complete&quot;  &amp;&amp;  Due_Date__c  &lt;  TODAY() ,
 IMAGE (&quot;/servlet/servlet.FileDownload?file=015E0000001lnMr&quot; , &quot;Red Flag&quot;) , 
 IF(TEXT(Project_Status__c) = &quot;Complete&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMm&quot;, &quot;Checkered Flag&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001lnMn&quot;, &quot;Green Flag&quot;) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updates__c</fullName>
        <label>Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Corporate Project</label>
    <listViews>
        <fullName>All_Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All Completed Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All Open Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Projects_All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing Projects - All</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Operations_Projects_All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Operations</value>
        </filters>
        <label>Operations Projects - All</label>
    </listViews>
    <listViews>
        <fullName>Technology_Projects_All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Actual_Budget__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <label>Technology Projects - All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>